--- a/Frontend/src/app/modules/login/login/login.component.html
+++ b/Frontend/src/app/modules/login/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div>   
+    <mat-form-field>
+        <mat-label>Username</mat-label>
+        <input matInput placeholder="Username">
+    </mat-form-field>
+</div>
+<div>
+    <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput placeholder="Password">
+    </mat-form-field>
+</div>
+<div>
+    <button mat-stroked-button color="primary">Login</button>
+</div>
