--- a/Frontend/src/app/modules/login/login/login.component.html
+++ b/Frontend/src/app/modules/login/login/login.component.html
@@ -1,15 +1,22 @@
-<div>   
-    <mat-form-field>
-        <mat-label>Username</mat-label>
-        <input matInput placeholder="Username">
-    </mat-form-field>
+<div id="logo-container" >
+    <img src="../../../../assets/logo.png">
 </div>
-<div>
-    <mat-form-field>
-        <mat-label>Password</mat-label>
-        <input matInput placeholder="Password">
-    </mat-form-field>
+<div id="loginform-container">
+    <div>   
+        <mat-form-field>
+            <mat-label>Email address</mat-label>
+            <input matInput placeholder="Email">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input matInput placeholder="Password">
+        </mat-form-field>
+    </div>
+    <div>
+        <button mat-flat-button color="primary">Login</button>
+        <button mat-flat-button color="primary">Register</button>
+    </div>
 </div>
-<div>
-    <button mat-stroked-button color="primary">Login</button>
-</div>
+
