--- a/Frontend/src/app/modules/login/login/login.component.html
+++ b/Frontend/src/app/modules/login/login/login.component.html
@@ -1,22 +1,37 @@
 <div id="logo-container" >
     <img src="../../../../assets/logo.png">
 </div>
-<div id="loginform-container">
+<form id="loginform-container" [formGroup]="loginForm">
     <div>   
-        <mat-form-field>
+        <mat-form-field class="loginform-fieds">
             <mat-label>Email address</mat-label>
-            <input matInput placeholder="Email">
+            <input matInput placeholder="Email" formControlName="email">
+            <mat-error *ngIf="!email.errors?.required">
+                Please enter a valid email address
+            </mat-error>
+            <mat-error *ngIf="email.errors?.required">
+                Please enter you email
+            </mat-error>
         </mat-form-field>
+        
     </div>
     <div>
-        <mat-form-field>
+        <mat-form-field class="loginform-fieds">
             <mat-label>Password</mat-label>
-            <input matInput placeholder="Password">
+            <input matInput placeholder="Password" formControlName="password">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" 
+            [attr.aria-pressed]="hide">
+                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              </button>
+            <mat-error *ngIf="password.errors?.required">
+                Please enter you password
+            </mat-error>
         </mat-form-field>
     </div>
-    <div>
-        <button mat-flat-button color="primary">Login</button>
+    <div class="loginform-button">
+        <button mat-flat-button color="primary" type="submit" 
+        [disabled]="!(loginForm.valid && loginForm.dirty)" (click)="onSubmit()">Login</button>
         <button mat-flat-button color="primary">Register</button>
     </div>
-</div>
+</form>
 
