--- a/Frontend/src/app/modules/news-feed/contents/contents.component.html
+++ b/Frontend/src/app/modules/news-feed/contents/contents.component.html
@@ -20,8 +20,8 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button mat-button><mat-icon>favorite_border</mat-icon></button>
+      <button mat-button><mat-icon>comment</mat-icon></button>
     </mat-card-actions>
   </mat-card>
 </div>
