--- a/Frontend/src/app/modules/news-feed/news-feed/news-feed.component.scss
+++ b/Frontend/src/app/modules/news-feed/news-feed/news-feed.component.scss
@@ -4,3 +4,18 @@ app-contents{
     margin-left: 10%;
     margin-top: 2%;
 }
+.likelist-button{
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.newsfeed-container{
+    display: flex;
+}
+.newsfeed-container__likelist{
+    position: fixed;
+    bottom: 0;
+    // left: 0;
+    right: 0;
+}
