--- a/Frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,1 +1,18 @@
-<p>nav-bar works!</p>
+<mat-toolbar>
+    <div  >
+        <img src="../../../../assets/logo.png" id="navbar-logo" />
+        <span class="navbar-title">AntraShare</span>
+    </div>
+    
+    <span class="navbar-spacer"></span>
+    <button mat-icon-button class="navbar-icon" aria-label="Profile">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+    <button mat-icon-button class="navbar-icon" aria-label="settings">
+      <mat-icon>settings</mat-icon>
+    </button>
+    <button mat-icon-button class="navbar-icon" aria-label="admin page">
+      <mat-icon>manage_accounts</mat-icon>
+    </button>
+  </mat-toolbar>
+  
